
20 Июня:
- Доделан полный функционал комментариев

21 Июня:
- Написать тесты для всех завершенных приложений (Category/Idea/Comment/User/Contacts)
--------------------
Category
--------------------
+ модель Category (test_str, created_at, updated_at)
+ views CategoryListView (status_code)
+ views CategoryDetailView (status_code, context)
+ views CategoryCreateView (status_code_with_no_permission, status_code_with_permission, create_category)
+ views CategoryUpdateView (status_code_with_no_permission, status_code_with_permission, update_category)
+ views CategoryDeleteView (status_code_with_no_permission, status_code_with_permission, delete_category)

--------------------
User
--------------------

24 Июня:
- Создание групп пользователей в БД (Admins, Mods, Users, Co-Authors, Investors, Verified Users)
- Доступы по группам

25 Июня:
- Персональная страничка User
- Аватар пользователя (интеграция в профиль + комментарии)
- Доработана страничка профиля
- Сделана форма редактирования профиля

26 Июня:
- Обновление карточек Idea
- Добавление Footer
- Отображение Idea в профиле пользователя

27 Июня:
- Модальные окна к Delete / Update комментариев
- Нормальный вид отображения всех пользователей
- Обновление фронтэнда Idea/Category/Comment

Пофиксить:
- Модальное окно Update comment - не перезагружает страницу после успешного обновления




СДЕЛАТЬ:
- Доработать Ideastatus
- Доработать Investment
- Доработать Partnership
- Доработать Rating
- Система лайков
- Ветвление комментариев
- Фильтрация по категориям
- Доработать Users (Вывод по группам)
- Категории на главной странице в виде движущейся ленты
- Подключить postgress
- Комментарии (добавить update вместо publicly если произошел update)
- Сделать Docker compose для запуска всех приложений
- Доработать форму Contacts
- Доработать Search
- Оптимизация SQL запросов

ВОПРОСЫ:
- Добавление нескольких изображений в одну модель (через другую модель?)