@@ -1,10 +1,10 @@
 from django.db import models
-from idea.models import Idea
-from user.models import User
+from common_imports.validation import idea_import
+from common_imports.validation import user_import
 
 class Comment(models.Model):
-    idea = models.ForeignKey(Idea, related_name='comments', on_delete=models.CASCADE, default=1)
-    author = models.ForeignKey(User, related_name='comments', on_delete=models.CASCADE)
+    idea = models.ForeignKey('idea.Idea', related_name='comments', on_delete=models.CASCADE, default=1)
+    author = models.ForeignKey('user.User', related_name='comments', on_delete=models.CASCADE)
     text = models.TextField()
     created_at = models.DateTimeField(auto_now_add=True)
     updated_at = models.DateTimeField(auto_now=True)
@@ -16,3 +16,9 @@ class Comment(models.Model):
             f"Author: {self.author}, -- "
             f"Created_at: {self.created_at}"
         )
+
+class CommentLikes(models.Model):
+    User = user_import()
+
+    author = models.ForeignKey('user.User', verbose_name='User', on_delete=models.CASCADE)
+    comment = models.ForeignKey(Comment, verbose_name='Comment', on_delete=models.CASCADE)
