@@ -1,5 +1,7 @@
 from django.contrib import admin
-from idea.models import Idea
+from idea.models import Idea, Likes, DisLikes
 
 # Register your models here.
 admin.site.register(Idea)
+admin.site.register(Likes)
+admin.site.register(DisLikes)
