@@ -1,0 +1,24 @@
+# Generated by Django 5.0.6 on 2024-06-28 10:15
+
+import django.db.models.deletion
+from django.conf import settings
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('idea', '0003_idea_image'),
+        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Likes',
+            fields=[
+                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('author', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL, verbose_name='User')),
+                ('idea', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='idea.idea', verbose_name='Idea')),
+            ],
+        ),
+    ]
