@@ -4,7 +4,6 @@ Button56
 =========================
 */
 
-
 .button56 {
   display: inline-block;
   border-radius: 6px;
@@ -18,6 +17,8 @@ Button56
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
+  position: relative;
+  z-index: 100;
 }
 
 .button56 span {
@@ -36,6 +37,11 @@ Button56
   transition: 0.5s;
 }
 
+.button56:hover {
+  background-color: #e0a800;
+  transform: scale(1.05);
+}
+
 .button56:hover span {
   padding-right: 25px;
 }
@@ -44,6 +50,7 @@ Button56
   opacity: 1;
   right: 0;
 }
+
 
 
 
@@ -484,3 +491,74 @@ Idea Cards
     z-index: 100;
 }
 
+/*
+=========================
+Like & Dislike button
+=========================
+*/
+
+
+.like-dislike-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -30px;
+}
+
+.like-button, .dislike-button {
+    text-decoration: none;
+    color: #555;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    margin: 0 5px;
+    transition: color 0.3s;
+}
+
+.like-button:hover, .dislike-button:hover {
+    color: #e0245e;
+}
+
+.like-icon, .dislike-icon {
+    position: relative;
+    font-size: 20px;
+    transition: transform 0.3s;
+}
+
+.like-button:hover .like-icon, .dislike-button:hover .dislike-icon {
+    transform: scale(1.2);
+}
+
+.like-count, .dislike-count {
+    position: absolute;
+    top: -4px;
+    right: -8px;
+    background-color: #e0245e;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 8px;
+    font-weight: bold;
+    transition: background-color 0.3s;
+}
+
+.like-button:hover .like-count, .dislike-button:hover .dislike-count {
+    background-color: #c81e4a;
+}
+
+.dislike-button {
+    color: #555;
+}
+
+.dislike-button:hover {
+    color: #3b5998;
+}
+
+.dislike-count {
+    background-color: #3b5998;
+}
+
+.dislike-button:hover .dislike-count {
+    background-color: #2d4373;
+}
