@@ -54,7 +54,7 @@
                 <li class="nav-item me-lg-2">
                     <form method="post" action='{% url 'users:logout' %}'>
                         {% csrf_token %}
-                        <button type="submit" class="btn56" style="align-content: center;">Logout</button>
+                        <button type="submit" class="button56" style="width: 55px; height: 28px; font-size: 12px; display: flex; align-items: center; justify-content: center; margin-top: 10px;">Logout</button>
                     </form>
                 </li>
             {% else %}
