@@ -79,6 +79,12 @@ User
 - Нормальный вид отображения всех пользователей
 - Обновление фронтэнда Idea/Category/Comment
 
+28 Июня:
+- Система лайков для Idea (Like + Dislike)
+- Система лайков для Comment (Like only)
+
+
+
 Пофиксить:
 - Модальное окно Update comment - не перезагружает страницу после успешного обновления
 
@@ -91,6 +97,10 @@ User
 - Доработать Partnership
 - Доработать Rating
 - Система лайков
+- Значки для групп
+- Система уведомлений
+- Обновить ссылки Footer
+- Попробовать подключить API платежи для Investments
 - Ветвление комментариев
 - Фильтрация по категориям
 - Доработать Users (Вывод по группам)
@@ -98,7 +108,7 @@ User
 - Подключить postgress
 - Комментарии (добавить update вместо publicly если произошел update)
 - Сделать Docker compose для запуска всех приложений
-- Доработать форму Contacts
+- Доработать форму Contacts (можно через модальное окно)
 - Доработать Search
 - Оптимизация SQL запросов
 
